--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,21 +1,24 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/profile">BookIt</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <a class="navbar-brand" href="/home">BookIt</a>
+  
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
   
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <!-- Home goes to /home -->
           <li class="nav-item">
-            <a class="nav-link" href="/profile">Home</a>
+            <a class="nav-link" href="/home">Home</a>
           </li>
+          <!-- Edit Events goes to /editEvent -->
           <li class="nav-item">
-            <a class="nav-link" href="#createEventForm">Create Event</a>
+            <a class="nav-link" href="/editEvent">Edit Events</a>
           </li>
         </ul>
   
-        <form action="/logout" method="GET" class="d-flex">
+        <form class="d-flex" action="/logout" method="GET">
           <button class="btn btn-outline-light" type="submit">Logout</button>
         </form>
       </div>
