Fixed small bug

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -32,7 +32,7 @@
         <h2>Create a New Event</h2>
             <form action="/createEvent" method="POST">
                 <div class="mb-3">
-                    label for="restaurantName" class="form-label">Selected Restaurant</label>
+                    <label for="restaurantName" class="form-label">Selected Restaurant</label>
                     <input type="text" id="restaurantName" name="restaurantName" class="form-control" readonly required>
                 </div>
                 <div class="mb-3">
